# Visual-Code-Space

./: .clang-format  .gitignore  .gitmodules  CONTRIBUTING.md  Fix README.md  README.md  RELEASE_NOTES.md  build.gradle  build.gradle.kts  build.sh  gradle.properties  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: androidci.yml  build.yml  codeql.yml  debug_build.yml  (+4 more)
actions/: build.gradle
actions-api/: build.gradle
app/: .gitignore  build.gradle  build.gradle.kts  proguard-rules.pro  test.keystore  vcspace.keystore
app/src/main/cpp/: CMakeLists.txt  gemini.cpp  gemini.h  jni_helper.cpp  jni_helper.h  logger.h  vcspace.cpp  wasm_apis.h  wasm_loader.cpp  wasm_loader.h
app/src/main/cpp/terminal/: executor.cpp
build-logic/: settings.gradle.kts
common/: build.gradle  build.gradle.kts
common-res/: build.gradle  build.gradle.kts
compiler/: build.gradle
cpp-compiler/: build.gradle
docs/: 1.3.0-pre.md  create_plugin.md
editor/: build.gradle  build.gradle.kts
editor-ace/: build.gradle  build.gradle.kts
editor-sora/: build.gradle  build.gradle.kts
editor-textmate/: build.gradle.kts
emulatorview/: build.gradle  build.gradle.kts
eventbus-events/: build.gradle  build.gradle.kts
extensions-api/: build.gradle
git-api/: build.gradle
gradle/: dependencies.gradle  libs.versions.toml
models/: build.gradle  build.gradle.kts
panels/: build.gradle
plugin-system/: build.gradle.kts
plugins/: build.gradle
resources/: build.gradle.kts
treeview/: build.gradle
(+1579 files in other folders)
